Added a class to handle controlled vocabulary drop down boxes. Improved the keyboard editing of the controlled vocabulary fields. Added checks to make sure the main frame is visible at start up, for instance when a second monitor has been removed. Preserved the cancel exit option in the save changes dialogue. Added ctrl+y and meta+y for the redo action (ctrl+shift+z still works). Prevented error pasting fields when a node is in the transfer handler (added a nodes to the table instead of pasting a field) Prevented erroneous starts to the field editor based on shift up or ctrl up etc. Allowed the short field editor to still be shown even it few chars cannot fit. Reduced errors in the table when reloading. Corrected an error copying from the table when in row selection mode. Allowed the paste of a single string to all selected cells. Enabled ctrl+v paste into the tables. Corrected thumbnail creation for path strings with white space. Aded icon for local files that have an archive handle (have been previously ingested by lamus) Corrected table focus after editing in the long field editor so that editing can continue after closing the long field editor with ctr+w. Corrected clipboard vs drag drop interaction. Allowed pasting of a single field into any field while still pasting multiple fields into the named columns. Corrected error hiding multiple columns at once. Added field usage descriptions.

--- a/src/nl/mpi/arbil/resources/templates/template.xml
+++ b/src/nl/mpi/arbil/resources/templates/template.xml
@@ -93,5 +93,24 @@
         <FieldUsage FieldPath=".METATRANSCRIPT.Corpus.Title" FieldDescription="The title of this Corpus" />
         <FieldUsage FieldPath=".METATRANSCRIPT.Corpus.Name" FieldDescription="The name of this corpus (also used to name this corpus in various applications)" />
         <FieldUsage FieldPath=".METATRANSCRIPT.Corpus.Description" FieldDescription="The general description of this corpus" />
+
+        <FieldUsage FieldPath=".METATRANSCRIPT.Session.MDGroup.Location.Continent" FieldDescription="The name of a continent" />
+        <FieldUsage FieldPath=".METATRANSCRIPT.Session.MDGroup.Location.Country" FieldDescription="The name of a country" />
+        <FieldUsage FieldPath=".METATRANSCRIPT.Session.MDGroup.Location.Region" FieldDescription="The name of a geographic region" />
+        <FieldUsage FieldPath=".METATRANSCRIPT.Session.MDGroup.Location.Address" FieldDescription="The address" />
+
+        <FieldUsage FieldPath=".METATRANSCRIPT.Session.MDGroup.Content.Genre" FieldDescription="Major genre classification" />
+        <FieldUsage FieldPath=".METATRANSCRIPT.Session.MDGroup.Content.SubGenre" FieldDescription="Sub genre classification" />
+        <FieldUsage FieldPath=".METATRANSCRIPT.Session.MDGroup.Content.Task" FieldDescription="List of the major tasks carried out in the session" />
+        <FieldUsage FieldPath=".METATRANSCRIPT.Session.MDGroup.Content.Modalities" FieldDescription="List of modalities used in the session" />
+        <FieldUsage FieldPath=".METATRANSCRIPT.Session.MDGroup.Content.Subject" FieldDescription="Classifies the subject of the session. Uses preferably an existing library classification scheme such as LCSH. The element has a scheme attribute that indicates what scheme is used. Comments: The element can be repeated but the user should guarantee consistency" />
+
+        <FieldUsage FieldPath=".METATRANSCRIPT.Session.MDGroup.Project.Name" FieldDescription="A short name or abbreviation for the project" />
+        <FieldUsage FieldPath=".METATRANSCRIPT.Session.MDGroup.Project.Title" FieldDescription="The full title of the project" />
+        <FieldUsage FieldPath=".METATRANSCRIPT.Session.MDGroup.Project.Id" FieldDescription="A unique identifier for the project" />
+        <FieldUsage FieldPath=".METATRANSCRIPT.Session.MDGroup.Project.Contact.Name" FieldDescription="Contact information for this project" />
+        <FieldUsage FieldPath=".METATRANSCRIPT.Session.MDGroup.Project.Contact.Address" FieldDescription="Contact information for this project" />
+        <FieldUsage FieldPath=".METATRANSCRIPT.Session.MDGroup.Project.Contact.Email" FieldDescription="Contact information for this project" />
+        <FieldUsage FieldPath=".METATRANSCRIPT.Session.MDGroup.Project.Description" FieldDescription="Description for this project" />
     </FieldUsageDescriptions>
 </template>
