--- a/src/nl/mpi/arbil/resources/templates/METATRANSCRIPT.Session.xml
+++ b/src/nl/mpi/arbil/resources/templates/METATRANSCRIPT.Session.xml
@@ -11,7 +11,7 @@
   <Session>
     <Name>Standard (Session) Resource Bundle</Name>
     <Title/>
-    <Date>Unspecified</Date>
+    <Date/>
     <Description LanguageId="" Link=""/>
     <MDGroup>
       <Location>
