--- a/src/nl/mpi/arbil/resources/templates/template.xml
+++ b/src/nl/mpi/arbil/resources/templates/template.xml
@@ -26,7 +26,7 @@
         <comment>The fields listed here will be required to match the regex constraint and will be highlighted in the application if they do not</comment>
         <FieldConstraint FieldPath=".*\.Date" Constraint="([0-9][0-9][0-9][0-9])((-[0-1][0-9])(-[0-3][0-9])?)?"/>
         <FieldConstraint FieldPath=".*\.BirthDate" Constraint="([0-9][0-9][0-9][0-9])((-[0-1][0-9])(-[0-3][0-9])?)?"/>
-        <FieldConstraint FieldPath=".*\.Email" Constraint="([.]+)\@([.]+)"/>
+        <FieldConstraint FieldPath=".*\.Email" Constraint=".+@.+"/>
     </FieldConstraints>
     <FieldTriggers>
         <comment>The field triggers cause the target field to be set after the source field is edited, the value set in the target is determined by the controlled vocabulary on the source field</comment>
@@ -53,7 +53,7 @@
     </ChildNodePaths>
     <RootTemplateComponents>
         <comment>The template components that can be added at the root or corpus branch level via the add menu and the display name for each</comment>
-        <RootTemplateComponent FileName="METATRANSCRIPT.Corpus.xml" DisplayName="Corpus Branch" />
+        <RootTemplateComponent FileName="METATRANSCRIPT.Corpus.xml" DisplayName="Corpus" />
         <RootTemplateComponent FileName="METATRANSCRIPT.Session.xml" DisplayName="Session" />
     </RootTemplateComponents>
     <AvailableTemplateComponents>
