Updated the type checker message when the resource file of a node is changed. Added AutoFields that are updated in automatically after the typechecker has run over a file. Added size type and format as auto fields in the default template. Added Size Type Format and ResourceLink as required fields. Corrected the resource file open in external application to cope with white space in the path. Added a file select action to the context menu so that the user can select a new resource file for resource nodes.

--- a/src/nl/mpi/arbil/resources/templates/template.xml
+++ b/src/nl/mpi/arbil/resources/templates/template.xml
@@ -15,9 +15,22 @@
         <RequiredField FieldPath=".METATRANSCRIPT.Session.Description" />
         <RequiredField FieldPath=".METATRANSCRIPT.Corpus.Name" />
         <RequiredField FieldPath=".METATRANSCRIPT.Session.Name" />
-        <RequiredField FieldPath=".METATRANSCRIPT.Session.Resources.MediaFile(x).ResourceLink" />
-        <RequiredField FieldPath=".METATRANSCRIPT.Session.Resources.WrittenResource(x).ResourceLink" />
+        <RequiredField FieldPath=".METATRANSCRIPT.Session.Resources.MediaFile\(x\).ResourceLink" />
+        <RequiredField FieldPath=".METATRANSCRIPT.Session.Resources.WrittenResource\(x\).ResourceLink" />
+        <RequiredField FieldPath=".METATRANSCRIPT.Session.Resources.WrittenResource\(x\).Size" />
+        <RequiredField FieldPath=".METATRANSCRIPT.Session.Resources.WrittenResource\(x\).Format" />
+        <RequiredField FieldPath=".METATRANSCRIPT.Session.Resources.MediaFile\(x\).Size" />
+        <RequiredField FieldPath=".METATRANSCRIPT.Session.Resources.MediaFile\(x\).Format" />
+        <RequiredField FieldPath=".METATRANSCRIPT.Session.Resources.MediaFile\(x\).Type" />
     </RequiredFields>
+    <AutoFields>
+        <comment>The fields listed here will be overwritten when the data becomes available and updated if it changes (this is primarily for resource files)</comment>
+        <AutoField FieldPath=".METATRANSCRIPT.Session.Resources.MediaFile(x).Size" FileAttribute="Size" />
+        <AutoField FieldPath=".METATRANSCRIPT.Session.Resources.MediaFile(x).Format" FileAttribute="MpiMimeType" />
+        <AutoField FieldPath=".METATRANSCRIPT.Session.Resources.MediaFile(x).Type" FileAttribute="FileType" />
+        <AutoField FieldPath=".METATRANSCRIPT.Session.Resources.WrittenResource(x).Size" FileAttribute="Size" />
+        <AutoField FieldPath=".METATRANSCRIPT.Session.Resources.WrittenResource(x).Format" FileAttribute="MpiMimeType" />
+    </AutoFields>
     <GenreSubgenres>
         <comment>The field pairs listed here will be linked as genre subgenre where the subgenre field gets its controlled vocabulary from the genre fields current selection</comment>
         <GenreSubgenre Subgenre=".METATRANSCRIPT.Session.MDGroup.Content.SubGenre" Genre=".METATRANSCRIPT.Session.MDGroup.Content.Genre" Description="description" />
