Added the date fields as required fields to accommodate the schema's treatment of dates. Assured that the preview table has stopped editing before changing its contents so that changes don't get lost. Added context menu action to revert individual fields to their original values. Added a menu action to open the changed nodes in a table. Updated the list of nodes needing save when a node is reloaded reverting all changes.

--- a/src/nl/mpi/arbil/resources/templates/template.xml
+++ b/src/nl/mpi/arbil/resources/templates/template.xml
@@ -22,6 +22,8 @@
         <RequiredField FieldPath=".METATRANSCRIPT.Session.Resources.MediaFile\(x\).Size" />
         <RequiredField FieldPath=".METATRANSCRIPT.Session.Resources.MediaFile\(x\).Format" />
         <RequiredField FieldPath=".METATRANSCRIPT.Session.Resources.MediaFile\(x\).Type" />
+        <RequiredField FieldPath=".*\.Date"/>
+        <RequiredField FieldPath=".*\.BirthDate"/>
     </RequiredFields>
     <AutoFields>
         <comment>The fields listed here will be overwritten when the data becomes available and updated if it changes (this is primarily for resource files)</comment>
