Moved the IMDI to HTML transformer into its own class. Added context menu item to export the selected IMDIs to HTML files. Removed title from the required fields in the standard template.

--- a/src/nl/mpi/arbil/resources/templates/template.xml
+++ b/src/nl/mpi/arbil/resources/templates/template.xml
@@ -10,7 +10,7 @@
 <template>
     <RequiredFields>
         <comment>The fields listed here as required fields will be highlighted in the application until they have a value entered</comment>
-        <RequiredField FieldPath=".METATRANSCRIPT.Session.Title" />
+        <!--<RequiredField FieldPath=".METATRANSCRIPT.Session.Title" />-->
         <RequiredField FieldPath=".METATRANSCRIPT.Session.Name" />
         <!--<RequiredField FieldPath=".METATRANSCRIPT.Session.Description" />-->
         <RequiredField FieldPath=".METATRANSCRIPT.Corpus.Name" />
