Updated the application title text in the windows installer. Modified the schema validation method (Check Format) to first use the name space url defined in the xml and then fall back to the imdi schema and then the schema provided in the jar file. Added clarin XSD reader. Loaded Clarin templates from the schema location of cmdi files. Addded component insertion into clarin files (via add menu). Added auto recovery from history when a file is missing. Updated the add menu contents to handle clarin sub nodes. Corrected nodes left after a delete from the tree. Updated the sub child node detection when reading in the metadata xml to handle cmdi templates with full paths. Added clarin link reader. Inserted Clarin linked nodes into the Arbil tree. Stored all clarin profile schemas on disk when they are first seen. Added Handle resolution and general URL resolution in Clarin links. Added test fields to the wizard html. Added CMDI function to tell when a resource can be added or not to a specific node. Set the profile name in clarin templates. Added test for drag and drop onto clarin nodes. Added resource drop action to add resource files to CMDI nodes. Set the drag cursor to indicate allow drops to CMDI nodes based on the values in the schema. Made more robust against broken cmdi resource links. Added resource proxy nodes for CMDI files when adding resources. Truncated clarin pathnames. Provided a default node name based on the profile name of a cmdi node. Started getting the filed constraints from the xsd. Corrected the adding of sub nodes such as actors. When a sub node is added the correct node path is returned for display in a table. Added check for updates menu item. Added template and profile selection dialogue. Added thread and progress bar for clarin profile loading due to 12mb file sizes. Populated the add menu from the chosen templates and profiles. Enabled adding the selected builtin templates and clarin profiles from the add menu. Modified the template system 

--- a/src/nl/mpi/arbil/resources/templates/template.xml
+++ b/src/nl/mpi/arbil/resources/templates/template.xml
@@ -93,6 +93,7 @@
         <RootTemplateComponent FileName="METATRANSCRIPT.Corpus.xml" DisplayName="Corpus" />
         <RootTemplateComponent FileName="METATRANSCRIPT.Session.xml" DisplayName="Session" />
         <RootTemplateComponent FileName="METATRANSCRIPT.Catalogue.xml" DisplayName="Catalogue" />
+        <RootTemplateComponent FileName="METATRANSCRIPT.SignLanguageSession.xml" DisplayName="Sign-Language Session" />
     </RootTemplateComponents>
     <AvailableTemplateComponents>
         <comment>The template components that can be added via the add menu and the display name for each</comment>
